tests/ui/type/pattern_types/bad_pat.stderr
error[E0586]: inclusive range with no end
  --> $DIR/bad_pat.rs:4:29
   |
LL | type NonNullU32_2 = u32 is 1..=;
   |                             ^^^ help: use `..` instead
   |
   = note: inclusive ranges must be bounded at the end (`..=b` or `a..=b`)

error[E0586]: inclusive range with no end
  --> $DIR/bad_pat.rs:6:26
   |
LL | type Positive2 = i32 is 0..=;
   |                          ^^^ help: use `..` instead
   |
   = note: inclusive ranges must be bounded at the end (`..=b` or `a..=b`)

error: "wildcard patterns are not permitted for pattern types"
  --> $DIR/bad_pat.rs:8:19
   |
LL | type Wild = () is _;
   |                   ^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0586`.
